# bazel-registry

./: .bazelignore  BUILD.bazel  GEMINI.md  MODULE.bazel  README.md  bazel-bazel-registry  bazel-bin  bazel-out  bazel-testlogs  commit_msg.txt  commit_msg_nvc.txt  index.html  index_test.html  pr_body.txt  pr_body_nvc.txt
ai/: AI_BCR.md  generate_spec.md
cmd/generate/: BUILD.bazel  main.go  main_test.go
modules/: BUILD.bazel
modules/bazel-go-basic/: metadata.json
modules/bazel-go-basic/0.1.4/: MODULE.bazel  source.json
modules/bazel-go-basic/0.2.19/: MODULE.bazel  source.json
modules/bazel-go-basic/0.2.20/: MODULE.bazel  source.json
modules/bazel-go-basic/0.2.21/: MODULE.bazel  source.json
modules/bazel_bats/: metadata.json
modules/bazel_debian_rootfs/: metadata.json
modules/bazel_debian_rootfs/0.0.1/: MODULE.bazel  source.json
modules/bazel_ebook/: metadata.json
modules/bazel_ebook/0.0.1/: source.json
modules/bazel_ebook/0.0.3/: presubmit.yml  source.json
modules/bazel_ebook/0.0.4/: presubmit.yml  source.json
modules/bazel_rootfs/: metadata.json
modules/bazel_rules_bid/: metadata.json
modules/bazel_rules_bt/: metadata.json
modules/bazel_rules_ghdl/: metadata.json
modules/bazel_rules_nvc/: metadata.json
modules/bazel_rules_osvvm/: metadata.json
modules/bazel_rules_raylib/: metadata.json
modules/bazel_rules_vivado/: metadata.json
modules/bazel_rules_vunit/: metadata.json
modules/bazoekt/: metadata.json
modules/elfutils/: metadata.json
modules/fbzl/: metadata.json
modules/fshlib/: metadata.json
modules/futility/: metadata.json
modules/gotopt2/: metadata.json
modules/graphviz/: metadata.json
modules/grlib/: metadata.json
modules/hello_foreign/: metadata.json
modules/libzstd_foreign/: metadata.json
modules/lit2md/: metadata.json
modules/nvc/: metadata.json
modules/opensbi/: metadata.json
modules/rules_bid/: metadata.json
modules/rules_bt/: metadata.json
modules/rules_dtc/: metadata.json
modules/rules_fusesoc/: metadata.json
modules/rules_ghdl/: metadata.json
modules/rules_latex_host/: metadata.json
modules/rules_nix/: metadata.json
modules/rules_nvc/: metadata.json
modules/rules_opensbi/: metadata.json
modules/rules_osvvm/: metadata.json
modules/rules_raylib/: metadata.json
modules/rules_shar/: metadata.json
modules/rules_vivado/: metadata.json
modules/rules_vunit/: metadata.json
modules/upspin/: metadata.json
modules/upspin_drive/: metadata.json
modules/vhdl_ls_gen/: metadata.json
modules/xrootfs/: metadata.json
(+1707 files in other folders)
