module(
    name = "bazel-registry",
    version = "0.0.0",
)

bazel_dep(name = "rules_go", version = "0.61.1")
bazel_dep(name = "buildifier_prebuilt", version = "8.5.1.2")
bazel_dep(name = "gazelle", version = "0.51.3")
bazel_dep(name = "bazel_lib", version = "3.3.1")
bazel_dep(name = "rules_cc", version = "0.2.20")
bazel_dep(name = "rules_android", version = "0.7.3")
