load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "generate_lib",
    srcs = ["main.go"],
    importpath = "github.com/filmil/bazel-registry/cmd/generate",
    visibility = ["//visibility:private"],
    deps = ["@rules_go//go/runfiles"],
)

go_binary(
    name = "generate",
    embed = [":generate_lib"],
    visibility = ["//visibility:public"],
    args = ["-modules_dir=$(location //modules:modules_dir)"],
    data = [
        "//modules:modules_dir",
        "//modules:all_modules",
    ],
)