load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "generate_lib",
    srcs = ["main.go"],
    importpath = "github.com/filmil/bazel-registry/cmd/generate",
    visibility = ["//visibility:private"],
    deps = ["@rules_go//go/runfiles"],
)

go_binary(
    name = "generate",
    embed = [":generate_lib"],
    visibility = ["//visibility:public"],
)

load("@rules_go//go:def.bzl", "go_test")

go_test(
    name = "generate_test",
    srcs = ["main_test.go"],
    embed = [":generate_lib"],
)

