load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "generate_lib",
    srcs = ["main.go"],
    importpath = "github.com/filmil/bazel-registry/cmd/generate",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "generate",
    embed = [":generate_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "generate_test",
    srcs = ["main_test.go"],
    embed = [":generate_lib"],
)
